samples/_failures_safe/1761306770_fc2d88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_042c395c.c: In function ‘main’:
./samples/SAFE/__tmp_042c395c.c:143:9: error: expected expression at end of input
  143 |         if (*(distances + i) ==
      |         ^~
./samples/SAFE/__tmp_042c395c.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_042c395c.c:143:9: error: expected declaration or statement at end of input
